erDiagram
    users ||--o{ products : "sells"
    users ||--o{ orders : "places"
    users ||--o{ addresses : "has"
    categories ||--o{ products : "classifies"
    products ||--o{ order_items : "appears in"
    orders ||--|{ order_items : "contains"
    orders ||--o{ escrows : "splits per seller"
    users ||--o{ carts : "holds"
    products ||--o{ carts : ""

    products {
        int id PK
        int seller_id FK
        int category_id FK
        varchar title
        bigint price
        int quantity
        varchar status
    }

    orders {
        int id PK
        varchar order_code UK
        int user_id FK
        bigint total_amount
        bigint shipping_fee
        bigint final_amount
        enum status
        tinyint is_paid
        varchar tracking_code
        int ghn_district_id
    }

    order_items {
        int id PK
        int order_id FK
        int product_id FK
        int quantity
        bigint subtotal
    }